--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,14 +14,14 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v5
       with:
-        python-version: "3.10"
+        python-version: "3.x"
         cache: 'pip'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install-r requirements.txt
+        pip install -r requirements.txt
 
     - name: Test with pytest
       run: python teste.py
